# IvoryCart

./: README.md
client/: package-lock.json  package.json
client/src/: AdminPage.tsx  ProductsPage.tsx
client/src/api/: client.ts
new-client/: .env  index.html  package-lock.json  package.json
new-client/src/: App.css  App.tsx
server/: CMakeLists.txt  main.cpp
server/include/: auth.h  database.h  services.h
server/src/: auth.cpp  database.cpp  main.cpp  routes.cpp
